# earthsync

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  biome.json  build_and_run.sh  docker-compose.dev.yml  docker-compose.yml  earthsync-server.yaml  grafana-dashboard.json  package.json  prometheus.yml  pyproject.toml  pyrightconfig.json  server-startup.bat  vulture_whitelist.py
backend/: Dockerfile  archiver.js  db.js  init-db.js  integration.test.js  middleware.js  openapi.yaml  package.json  processing.test.js  processingUtils.js  server.js  streamProcessor.js  websocketManager.js
client/: .dockerignore  .env  Dockerfile  jest.config.js  nginx.conf  package-lock.json  package.json
detector/: .dockerignore  .env  Dockerfile  constants.js  detector.js  package-lock.json  package.json
detectors/: .eslintrc.json  Dockerfile  constants.js  detector.js  (+1 more)
firmware/: README.md  pyproject.toml
firmware/src/earthsync_station/: __init__.py  adc.py  config.py  gps.py  main.py  uploader.py
firmware/tests/: test_adc.py  test_config.py  test_gps.py  test_main.py  test_uploader.py
server/: .dockerignore  .env  .eslintrc.json  Dockerfile  archiver.js  db.js  integration.test.js  middleware.js  openapi.yaml  package-lock.json  package.json  processing.test.js  processingUtils.js  pyproject.toml  server.js  streamProcessor.js  websocketManager.js
server/routes/: auth.js  history.js  misc.js
server/src/earthsync_server/: __init__.py  app.py  config.py  constants.py  main.py  models.py
server/src/earthsync_server/db/: pool.py  schema.py  store.py
server/src/earthsync_server/dsp/: __init__.py  cross_validation.py  lorentzian.py  peak_analysis.py  peak_tracking.py  peaks.py  quality.py  welch.py
server/src/earthsync_server/middleware/: __init__.py  auth.py  auth_service.py  rate_limit.py  rate_limiter.py
server/src/earthsync_server/redis/: __init__.py  clients.py
server/src/earthsync_server/routes/: __init__.py  auth.py  calibration.py  export.py  health.py  history.py  ingest.py  public.py
server/src/earthsync_server/services/: archiver.py  cross_validator.py  export_formats.py  qburst_correlator.py  stream_processor.py  websocket.py
server/tests/: conftest.py
server/tests/integration/: conftest.py  test_full_pipeline.py
server/tests/unit/: test_auth.py  test_db_pool.py  test_rate_limit.py  test_rate_limiter.py  test_redis_clients.py  test_schema.py  test_store.py  test_ws_auth.py
server/tests/unit/dsp/: test_cross_validation.py  test_lorentzian.py  test_peak_analysis.py  test_peak_tracking.py  test_peaks.py  test_quality.py  test_welch.py
server/tests/unit/routes/: test_auth.py  test_calibration.py  test_export.py  test_health.py  test_history.py  test_ingest.py  test_public.py
server/tests/unit/services/: test_archiver.py  test_cross_validator.py  test_export_formats.py  test_qburst_correlator.py  test_stream_processor.py  test_websocket.py
server/utils/: auth.js  metrics.js  redisClients.js
simulator/: Dockerfile  pyproject.toml
simulator/src/earthsync_simulator/: __init__.py  config.py  main.py  profiles.py  signal_generator.py
simulator/tests/: test_main.py  test_profiles.py  test_signal_generator.py
(+127 files in other folders)
