[project]
name = "earthsync-station"
version = "0.1.1"
description = "EarthSync Raspberry Pi station — SR data acquisition and upload"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28",
    "numpy>=2.0",
    "pydantic-settings>=2.13",
    "structlog>=25.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
    "pytest-cov>=7.1",
    "ruff>=0.15",
    "pyright>=1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/earthsync_station"]
