[project]
name = "earthsync-simulator"
version = "0.1.1"
description = "EarthSync observatory simulators — synthetic SR signal generation"
requires-python = ">=3.13"
dependencies = [
    "redis[hiredis]>=7.4",
    "numpy>=2.4",
    "scipy>=1.17",
    "pydantic-settings>=2.13",
    "structlog>=25.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.1",
    "ruff>=0.15",
    "pyright>=1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/earthsync_simulator"]
